fix shared DTOs
